--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- IcoFonts Library -->
+    <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
+
+
     <title>React App</title>
   </head>
   <body>
