--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- IcoFonts Library -->
-    <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css">
+    <!-- <link rel="stylesheet" href="myProjects/webProject/icofont/css/icofont.min.css"> -->
 
 
     <title>React App</title>
